Extra spacing at top of UGC (fix issue on mobile with text overlapping)

--- a/tourismaustralia-styleguide/assets/scss/_variables.scss
+++ b/tourismaustralia-styleguide/assets/scss/_variables.scss
@@ -110,6 +110,7 @@ $search-text-color:#00535e;
 //**********************
 $bottom-spacing: 40px;
 $bottom-spacing-double : 80px;
+$top-spacing: 40px;
 $mozaic-col-padding: 3px;
 
 //*********************
